炫彩编程助手/Data/DemoMgr/Delphi/Lib/XCGUI.pas

function XFrameWnd_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;pTitle:PWideChar;hWndParent:Integer;XCStyle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFrameWnd_CreateEx (dwExStyle:Integer;lpClassName:PWideChar;lpWindowName:PWideChar;dwStyle:Integer;x:Integer;y:Integer;cx:Integer;cy:Integer;hWndParent:Integer;XCStyle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XFrameWnd_GetLayoutAreaRect (hWindow:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XFrameWnd_SetView (hWindow:Integer;hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XFrameWnd_SetPaneSplitBarColor (hWindow:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XFrameWnd_SaveLayoutToFile (hWindow:Integer;pFileName:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XFrameWnd_LoadLayoutFile (hWindow:Integer;aPaneList:Integer;nEleCount:Integer;pFileName:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XFrameWnd_AddPane (hWindow:Integer;hPaneDest:Integer;hPaneNew:Integer;align:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XFrameWnd_MergePane (hWindow:Integer;hPaneDest:Integer;hPaneNew:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_LoadFile (pImageName:PWideChar;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileAdaptive (pImageName:PWideChar;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileRect (pImageName:PWideChar;x:Integer;y:Integer;cx:Integer;cy:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadResAdaptive (id:Integer;pType:PWideChar;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadRes (id:Integer;pType:PWideChar;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadZip (pZipFileName:PWideChar;pImageName:PWideChar;pPassword:PWideChar;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadZipAdaptive (pZipFileName:PWideChar;pImageName:PWideChar;pPassword:PWideChar;x1:Integer;x2:Integer;y1:Integer;y2:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadZipRect (pZipFileName:PWideChar;pImageName:PWideChar;pPassword:PWideChar;x:Integer;y:Integer;cx:Integer;cy:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadMemory (pBuffer:Integer;nSize:Integer;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadMemoryRect (pBuffer:Integer;nSize:Integer;x:Integer;y:Integer;cx:Integer;cy:Integer;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadMemoryAdaptive (pBuffer:Integer;nSize:Integer;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFromImage (pImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileFromExtractIcon (pImageName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileFromHICON (hIcon:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileFromHBITMAP (hBitmap:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_IsStretch (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_IsAdaptive (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_IsTile (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_SetDrawType (hImage:Integer;nType:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_SetDrawTypeAdaptive (hImage:Integer;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XImage_SetTranColor (hImage:Integer;color:Integer);stdcall;far; external 'xcgui.dll';
procedure XImage_SetTranColorEx (hImage:Integer;color:Integer;tranColor:Byte);stdcall;far; external 'xcgui.dll';
function XImage_SetRotateAngle (hImage:Integer;fAngle:Single) : Single;stdcall;far; external 'xcgui.dll';
procedure XImage_EnableTranColor (hImage:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XImage_EnableAutoDestroy (hImage:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XImage_EnableCenter (hImage:Integer;bCenter:LongBool);stdcall;far; external 'xcgui.dll';
function XImage_IsCenter (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_GetDrawType (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_GetWidth (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_GetHeight (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XImage_AddRef (hImage:Integer);stdcall;far; external 'xcgui.dll';
procedure XImage_Release (hImage:Integer);stdcall;far; external 'xcgui.dll';
function XImage_GetRefCount (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XImage_Destroy (hImage:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_Create () : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_Destroy (hLayout:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_AddEle (hLayout:Integer;hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_AddLayoutObject (hLayout:Integer;hLayoutObject:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_AddShape (hLayout:Integer;hShape:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_Add (hLayout:Integer;hChild:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XLayout_Insert (hLayout:Integer;hChild:Integer;index:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XLayout_RemoveLayout (hLayout:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_RemoveChild (hLayout:Integer;hChild:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_GetZOrder (hLayout:Integer;hChild:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_AdjustLayout (hLayout:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetRectFrame (hLayout:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetRect (hLayout:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetRectFrame (hLayout:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
function XLayout_GetWindow (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetEle (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetParentLayout (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetParent (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_SetID (hLayout:Integer;nID:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_GetID (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_SetUID (hLayout:Integer;nUID:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_GetUID (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_SetHorizon (hLayout:Integer;bHorizon:LongBool);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetAlignH (hLayout:Integer;nAlign:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetAlignV (hLayout:Integer;nAlign:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetPadding (hLayout:Integer;left:Integer;top:Integer;right:Integer;bottom:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetSpace (hLayout:Integer;nSpace:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetLayoutWidth (hLayout:Integer;nType:Integer;nWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetLayoutHeight (hLayout:Integer;nType:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetLayoutWidth (hLayout:Integer;pType:Integer;pWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetLayoutHeight (hLayout:Integer;pType:Integer;pHeight:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_GetWidth (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetHeight (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetWidthIn (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetHeightIn (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_GetContentSize (hLayout:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
procedure XLayout_ShowLayout (hLayout:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
function XLayout_GetChildCount (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetChildType (hLayout:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetChild (hLayout:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_Draw (hLayout:Integer;hDraw:Integer);stdcall;far; external 'xcgui.dll';
procedure Layout_SetEle (hLayout:Integer;hParent:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_SetDrawItemBkFlags (hEle:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_SetItemData (hEle:Integer;iItem:Integer;nUserData:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetItemData (hEle:Integer;iItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_SetItemInfo (hEle:Integer;iItem:Integer;pItem:TlistBox_item_info_i) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetItemInfo (hEle:Integer;iItem:Integer;pItem:TlistBox_item_info_i) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XListBox_AddItemBkBorder (hEle:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XListBox_AddItemBkFill (hEle:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XListBox_AddItemBkImage (hEle:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_GetItemBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_ClearItemBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_SetSelectItem (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetSelectItem (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_CancelSelectItem (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_CancelSelectAll (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetSelectAll (hEle:Integer;pArray:Integer;nArraySize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_GetSelectCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_GetItemMouseStay (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_SelectAll (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XListBox_SetItemHeightDefault (hEle:Integer;nHeight:Integer;nSelHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XListBox_GetItemHeightDefault (hEle:Integer;pHeight:Integer;pSelHeight:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_GetItemIndexFromHXCGUI (hEle:Integer;hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_SetRowSpace (hEle:Integer;nSpace:Integer);stdcall;far; external 'xcgui.dll';
